kubernetes/feedback-viewer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: feedback-viewer
  namespace: feedback-viewer
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: feedback-viewer-app
  sessionAffinity: None
  type: ClusterIP
