kubernetes/pagesuccess-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pagesuccess-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - pagesuccess.tbs.alpha.canada.ca
    secretName: pagesuccess-tls-secret-prod
  rules:
  - host: pagesuccess.tbs.alpha.canada.ca
    http:
      paths:
      - backend:
          serviceName: pagesuccess
          servicePort: 8080
        path: /
